2007-05-21  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Application.cs: Avoid a possible stack overflow when trying to exit
	  the application.

2007-05-19  Marek Safar  <marek.safar@gmail.com>

	* Theme.cs (GetHatchBrush): A key uses internal value instead of formated
	enum value.

2007-05-19  Andreia Gaita  <avidigal@novell.com>

	* NumericUpDown.cs: Added 2.0 methods (spin acceleration)
	* NumericUpDownAcceleration.cs, 
	  NumericUpDownAccelerationCollection.cs: Added 2.0
	  implementation.

2007-05-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* RichTextBox.cs: Recalculate the document after the ScrollBars
	property is changed. Fixes bug #81681.

2007-05-18  Jonathan Pobst  <monkey@jpobst.com>

	* DataObject.cs: Implement 2.0 methods.

2007-05-18  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ThemeWin32Classic.cs: Draw the check marks in ListViewItems
	in the center of the checkbox, not in the left-top corner. 
	Fixes #80037.

2007-05-18  Jackson Harper  <jackson@ximian.com>

	* RichTextBox.cs: Recalculate the document after the scrollbars
	property is changed.
	* TextBoxBase.cs: ScrollBars is not a flags enum...This fixes
	81486.

2007-05-18  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* CreateParams.cs: Make HasWindowManager marginally faster.
	* XplatUIX11.cs, Hwnd.cs: CreateWindow: Move the default location code
	  into Hwnd so that other drivers can use it as well.
	* XplatUIWin32.cs: CreateWindow: If the window has a window manager get
	  the default location from Hwnd. Fixes MDI client windows always
	  showing up at (0,0) in Windows (Win32 won't set the default
	  location since the window styles aren't correct).

2007-05-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* TreeView.cs: Modified DoubleBuffered to just use the base
	implementation.

2007-05-18  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Set the top node to the last child node when
	expanding all
	- When we get focus, if there is no selected node, use the top