@@ -1,3 +1,9 @@
+2007-05-21  Jonathan Pobst  <monkey@jpobst.com>
+
+	* DefaultLayoutTest.cs: Tests for bugs 81694, 81695.
+	* FormTest.cs: Test setting the form size smaller than the WM will
+	allow it.
+
 2007-05-21  Chris Toshok  <toshok@ximian.com>
 
 	* DataBindingTests.cs (TestColumnAdd): enable this test.  the
