@@ -1,3 +1,10 @@
+2007-05-21  Jonathan Pobst  <monkey@jpobst.com>
+
+	* Control.cs: Delay calculating anchor distances until we actually layout.
+	Always query the WM for the actual size and location it put us at instead of
+	only when we send negative values.
+	[Fixes bugs #81694, 81695]
+
 2007-05-21  Rolf Bjarne Kvinge <RKvinge@novell.com> 
 
 	* Application.cs: Avoid a possible stack overflow when trying to exit
